--- a/client/index.html
+++ b/client/index.html
@@ -8,17 +8,22 @@
 </head>
 <body ng-app="app">
 
-	<div class="container" ng-controller="niceCtrl">
-		
+	<div class="container" ng-controller="appCtrl">
 		<h1 class="logo">3-fund Calculator</h1>
-
-		<div class="col-md-6 col-md-offset-3">{{data}}</div>
+		
+		<div class="col-md-6 col-md-offset-3">
+			<p>{{funds.vti}}</p>
+			<p>{{funds.vxus}}</p>
+			<p>{{funds.bnd}}</p>
+		</div>
 	</div>
 
 
 
 
 	<script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
+	<script type="text/javascript" src="node_modules/angular-resource/angular-resource.min.js"></script>
+	<script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
