--- a/client/index.html
+++ b/client/index.html
@@ -5,17 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body ng-app="app">
 
-	<div class="container" ng-controller="appCtrl">
-		<h1 class="logo">3-fund Calculator</h1>
-		
-		<div class="col-md-6 col-md-offset-3">
-			<p>{{funds.vti}}</p>
-			<p>{{funds.vxus}}</p>
-			<p>{{funds.bnd}}</p>
-		</div>
+	<div class="container">
+		<h1 class="logo">3-FUND CALCULATOR</h1>
+		<ng-view></ng-view>
 	</div>
 
 
