--- a/client/index.html
+++ b/client/index.html
@@ -4,13 +4,14 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+	<link rel="stylesheet" type="text/css" href="css/materialize/css/materialize.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+
 </head>
 <body ng-app="app">
-
+	<h1 class="logo">3-Fund Calculator</h1>
 	<div class="container">
-		<h1 class="logo">3-FUND CALCULATOR</h1>
 		<ng-view></ng-view>
 	</div>
 
@@ -20,6 +21,7 @@
 	<script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
 	<script type="text/javascript" src="node_modules/angular-resource/angular-resource.min.js"></script>
 	<script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
+	<script type="text/javascript" src="css/materialize/js/materialize.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
