--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,8 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="css/materialize/css/materialize.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-
 </head>
 <body ng-app="app">
 	<h1 class="logo">3-Fund Calculator</h1>
@@ -15,13 +11,12 @@
 		<ng-view></ng-view>
 	</div>
 
-
-
-
 	<script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
-	<script type="text/javascript" src="node_modules/angular-resource/angular-resource.min.js"></script>
 	<script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
 	<script type="text/javascript" src="css/materialize/js/materialize.min.js"></script>
-	<script type="text/javascript" src="app.js"></script>
+	<script type="text/javascript" src="public/js/app.config.js"></script>
+	<script type="text/javascript" src="public/js/main.service.js"></script>
+	<script type="text/javascript" src="public/js/api.service.js"></script>
+	<script type="text/javascript" src="public/js/main.controller.js"></script>
 </body>
 </html>
