--- a/client/index.html
+++ b/client/index.html
@@ -6,17 +6,19 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body ng-app="app">
-	<h1 class="logo">3-Fund Calculator</h1>
-	<div class="container">
-		<ng-view></ng-view>
-	</div>
+	
+	<div class="page {{pageClass}}" ng-view></div>
+	
 
 	<script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
 	<script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
+	<script type="text/javascript" src="node_modules/angular-animate/angular-animate.min.js"></script>
 	<script type="text/javascript" src="css/materialize/js/materialize.min.js"></script>
 	<script type="text/javascript" src="public/js/app.config.js"></script>
 	<script type="text/javascript" src="public/js/main.service.js"></script>
 	<script type="text/javascript" src="public/js/api.service.js"></script>
-	<script type="text/javascript" src="public/js/main.controller.js"></script>
+	<script type="text/javascript" src="public/js/one.controller.js"></script>
+	<script type="text/javascript" src="public/js/two.controller.js"></script>
+	<script type="text/javascript" src="public/js/three.controller.js"></script>
 </body>
 </html>
