--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>3-fund Calculator</title>
 	<link rel="stylesheet" type="text/css" href="css/materialize/css/materialize.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
